--- a/MUSInovation/MUSInovation/Views/Home/Index.cshtml
+++ b/MUSInovation/MUSInovation/Views/Home/Index.cshtml
@@ -1,8 +1,20 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    var data = ViewBag.Info;
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p> @data.Title</p>
+    <p> Url de l'image : @data.Poster</p>
+    <img src="@data.Poster">
 </div>
+@*<div class="container">
+    <div class="row">
+        <div class="col-sm-3 border border-primary"><p class="text-center">TEST</p></div>
+        <div class="col-sm-3 border border-primary"><p class="text-center">TEST</p></div>
+        <div class="col-sm-3 border border-primary"><p class="text-center">TEST</p></div>
+        <div class="col-sm-3 border border-primary"><p class="text-center">TEST</p></div>
+    </div>
+</div>*@
