OMDB API. Affichages des films recents, affiache des films par leurs ids

--- a/MUSInovation/MUSInovation/Views/Home/Index.cshtml
+++ b/MUSInovation/MUSInovation/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
     <p> Url de l'image : @data.Poster</p>
     <img src="@data.Poster">*@
     <img src="img/home_logo.png">
-    <a asp-action="FilmsRecents" asp-controller="home" class="btn btn-info" role="button">Films les plus récents</a>
+    <a asp-action="FilmsRecents" asp-controller="Film" class="btn btn-info" role="button">Films les plus récents</a>
 </div>
 @*<div class="container">
     <div class="row">
