--- a/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
+++ b/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
@@ -22,12 +22,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Accueil</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FilmsRecents">Films récents</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="FilmsRecents">Films récents</a>
                         </li>
                     </ul>
                 </div>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Titre, auteur..." aria-label="Search">
+                <form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Rechercher" method="post">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Titre, auteur..." name="valeur_recherche" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
                 </form>
             </div>
