Voir Bande annonce Fonctionnel. (Youtube API fonctionnel)

--- a/MUSInovation/MUSInovation/Views/Film/AfficherFilm.cshtml
+++ b/MUSInovation/MUSInovation/Views/Film/AfficherFilm.cshtml
@@ -1,21 +1,23 @@
 ﻿@model Movie
 
-<div class="text-center">
-    <h1>@Model.Title</h1>
-    <p>@Model.Plot</p>
-    <br>
-    <div class="border">
+    <div class="text-center">
+        <h1>@Model.Title</h1>
+        <p>@Model.Plot</p>
+        <br>
+        <div class="border">
 
-        @if (@Model.Poster == "N/A")
-        {
-            <img src="https://thumbs.dreamstime.com/b/no-image-available-icon-flat-vector-no-image-available-icon-flat-vector-illustration-132482953.jpg" />
+            @if (@Model.Poster == "N/A")
+            {
+                <img src="https://thumbs.dreamstime.com/b/no-image-available-icon-flat-vector-no-image-available-icon-flat-vector-illustration-132482953.jpg" />
 
-        }
-        else
-        {
-            <img src="@Model.Poster" />
+            }
+            else
+            {
+                <img src="@Model.Poster" />
 
-        }
+            }
+
+        </div>
+        <a class="btn btn-primary" href="http://www.youtube.com/watch?v=@Model.YoutubeID" target="_blank">Visionner bande annonce</a>
 
     </div>
-</div>
