--- a/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
+++ b/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="FilmsRecents">Films récents</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Apis" asp-action="AfficherMeteo">Météo</a>
+                        </li>
                     </ul>
                 </div>
                 <form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Rechercher" method="post">
