--- a/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
+++ b/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
@@ -27,6 +27,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Apis" asp-action="AfficherMeteo">Météo</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ChuckNorris" asp-action="Index">Chuck</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LoveCalculator" asp-action="Index">LoveCalculator</a>
+                        </li>
                     </ul>
                 </div>
                 <form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Rechercher" method="post">
