--- a/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
+++ b/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Film" asp-action="FilmsRecents">Films récents</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Apis" asp-action="AfficherMeteo">Météo</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Weather" asp-action="AfficherMeteo">Météo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ChuckNorris" asp-action="Index">Chuck</a>
