--- a/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
+++ b/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                     </ul>
                 </div>
                 <form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Rechercher" method="post">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Titre, auteur..." name="valeur_recherche" aria-label="Search">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Titre du film..." name="valeur_recherche" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
                 </form>
             </div>
