--- a/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
+++ b/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         </li>
                     </ul>
                 </div>
-                <form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Rechercher" method="post">
+                <form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Rechercher" method="GET">
                     <input class="form-control mr-sm-2" type="search" placeholder="Titre du film..." name="valeur_recherche" aria-label="Search">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
                 </form>
