Update FilmController.cs, HomeController.cs, and 8 more files...

--- a/MUSInovation/MUSInovation/Views/Film/AfficherFilm.cshtml
+++ b/MUSInovation/MUSInovation/Views/Film/AfficherFilm.cshtml
@@ -1,8 +1,9 @@
-﻿@model Movie
+﻿@model IMovie
 
     <div class="text-center">
         <h1>@Model.Title</h1>
         <p>@Model.Plot</p>
+        <p><b>Score: </b>@Model.imdbRating</p>
         <br>
         <div class="border">
 
