Update FilmController.cs, HomeController.cs, and 6 more files...

--- a/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
+++ b/MUSInovation/MUSInovation/Views/Shared/_Layout.cshtml
@@ -37,8 +37,8 @@
                 </div>
                 <form class="form-inline my-2 my-lg-0" asp-controller="Home" asp-action="Rechercher" method="GET">
                     <input class="form-control mr-sm-2" type="search" placeholder="Titre du film..." name="valeur_recherche" aria-label="Search">
-                    <label for="auteur" style="margin-right:10px">Par auteur: </label>
-                    <input type="checkbox" id="auteur" name="par_auteur" style="margin-right:20px">
+                    @*<label for="auteur" style="margin-right:10px">Par auteur: </label>
+                    <input type="checkbox" id="auteur" name="par_auteur" style="margin-right:20px">*@
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
                 </form>
             </div>
